[gd_scene load_steps=29 format=3 uid="uid://dphry0qdevko3"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_th5jl"]
[ext_resource type="Texture2D" uid="uid://dl71bnkna037b" path="res://assets/ship.png" id="1_yaque"]
[ext_resource type="Script" path="res://components/scripts/move_component.gd" id="2_1xsoc"]
[ext_resource type="Script" path="res://components/scripts/move_input_component.gd" id="3_eseh5"]
[ext_resource type="Texture2D" uid="uid://b1wf0k8tyivcs" path="res://assets/ship_flame.png" id="3_f1cv7"]
[ext_resource type="Script" path="res://components/scripts/hurtbox_component.gd" id="4_7dupk"]
[ext_resource type="Resource" uid="uid://dgidb1bqlp7ud" path="res://resources/ship_move_stats.tres" id="4_prnfq"]
[ext_resource type="Script" path="res://scripts/components/variable_pitch_audio_stream_player.gd" id="5_2iif0"]
[ext_resource type="Script" path="res://components/scripts/position_clamp_component.gd" id="5_85non"]
[ext_resource type="AudioStream" uid="uid://dd4mx1lvm3dy0" path="res://sounds/laser_sound.wav" id="5_iyqhr"]
[ext_resource type="Script" path="res://components/scripts/stats_component.gd" id="5_o7m7t"]
[ext_resource type="Script" path="res://components/scripts/scale_component.gd" id="6_f8sfp"]
[ext_resource type="Script" path="res://components/scripts/spawner_component.gd" id="7_vb0qg"]
[ext_resource type="PackedScene" uid="uid://j6btmgcp07aj" path="res://scenes/laser.tscn" id="8_1ak0e"]
[ext_resource type="Script" path="res://components/scripts/hurt_component.gd" id="10_cfnqk"]
[ext_resource type="Script" path="res://components/scripts/destroyed_component.gd" id="11_h0pp2"]
[ext_resource type="PackedScene" uid="uid://br0284e6sie0n" path="res://scenes/explosion_effect.tscn" id="15_djpxo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wgyaa"]
atlas = ExtResource("1_yaque")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nv5s"]
atlas = ExtResource("1_yaque")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aymt0"]
atlas = ExtResource("1_yaque")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8vq4l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgyaa")
}],
"loop": true,
"name": &"bank_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nv5s")
}],
"loop": true,
"name": &"bank_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aymt0")
}],
"loop": true,
"name": &"center",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_y6o42"]
atlas = ExtResource("3_f1cv7")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mp503"]
atlas = ExtResource("3_f1cv7")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlusb"]
atlas = ExtResource("3_f1cv7")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjmk5"]
atlas = ExtResource("3_f1cv7")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_finoe"]
atlas = ExtResource("3_f1cv7")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlapq"]
atlas = ExtResource("3_f1cv7")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_tqilq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6o42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mp503")
}],
"loop": true,
"name": &"bank_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlusb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjmk5")
}],
"loop": true,
"name": &"bank_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_finoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlapq")
}],
"loop": true,
"name": &"center",
"speed": 10.0
}]

[node name="Player" type="Node2D"]
script = ExtResource("1_th5jl")

[node name="Anchor" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="Anchor"]
sprite_frames = SubResource("SpriteFrames_8vq4l")
animation = &"center"
autoplay = "center"

[node name="FlameAnimatedSprite" type="AnimatedSprite2D" parent="Anchor"]
unique_name_in_owner = true
show_behind_parent = true
position = Vector2(0, 15.0301)
sprite_frames = SubResource("SpriteFrames_tqilq")
animation = &"center"
autoplay = "center"

[node name="LeftMuzzle" type="Marker2D" parent="."]
visible = false
position = Vector2(-4.5, -4)

[node name="RightMuzzle" type="Marker2D" parent="."]
visible = false
position = Vector2(4.5, -4)

[node name="HurtboxComponent" type="Area2D" parent="."]
visible = false
collision_mask = 0
script = ExtResource("4_7dupk")

[node name="Collision" type="CollisionPolygon2D" parent="HurtboxComponent"]
polygon = PackedVector2Array(-8, 2, -3, -3, -3, -4, -1, -7, 1, -7, 3, -4, 3, -3, 8, 2, 8, 4, 5, 4, 5, 7, -5, 7, -5, 4, -8, 4)

[node name="VariablePitchAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_iyqhr")
volume_db = -12.0
bus = &"Sounds"
script = ExtResource("5_2iif0")

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="Components" type="Node" parent="."]

[node name="StatsComponent" type="Node" parent="Components"]
script = ExtResource("5_o7m7t")

[node name="MoveComponent" type="Node" parent="Components" node_paths=PackedStringArray("actor")]
script = ExtResource("2_1xsoc")
actor = NodePath("../..")

[node name="MoveInputComponent" type="Node" parent="Components" node_paths=PackedStringArray("move_component")]
script = ExtResource("3_eseh5")
move_component = NodePath("../MoveComponent")
move_stats = ExtResource("4_prnfq")

[node name="ScaleComponent" type="Node" parent="Components" node_paths=PackedStringArray("sprite")]
script = ExtResource("6_f8sfp")
sprite = NodePath("../../Anchor")

[node name="HurtComponent" type="Node" parent="Components" node_paths=PackedStringArray("stats_component", "hurtbox_component")]
script = ExtResource("10_cfnqk")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../../HurtboxComponent")

[node name="DestroyedComponent" type="Node" parent="Components" node_paths=PackedStringArray("actor", "stats_component", "destroy_effect_spawner_component")]
script = ExtResource("11_h0pp2")
actor = NodePath("../..")
stats_component = NodePath("../StatsComponent")
destroy_effect_spawner_component = NodePath("../ExplosionSpawnerComponent")

[node name="PositionClampComponent" type="Node2D" parent="Components" node_paths=PackedStringArray("actor")]
script = ExtResource("5_85non")
actor = NodePath("../..")

[node name="SpawnerComponent" type="Node2D" parent="Components"]
script = ExtResource("7_vb0qg")
scene = ExtResource("8_1ak0e")

[node name="ExplosionSpawnerComponent" type="Node2D" parent="Components"]
script = ExtResource("7_vb0qg")
scene = ExtResource("15_djpxo")
